...
                        onClick = { onDismiss() },
                        modifier = Modifier.width(150.dp),
                        fontSize = 16
                    )
                    Spacer(modifier = Modifier.width(8.dp))
                    DisplayButton(
                        text = "Confirm",
                        onClick = confirmAction,
                        modifier = Modifier.width(150.dp),
                        fontSize = 16
                    )
                }
            }
...
