...
                    "Cancel",
                    onClick = { navController.popBackStack() },
                    modifier = Modifier.size(width = 120.dp, height = 50.dp),
                    fontSize = 14
                )
                DisplayButton(
                    "Save",
                    onClick = {
                        wasSubmitted = true
                        val validationError = validateForm(
                            name,
                            description,
                            calories,
...
